--- a/css/index-style.css
+++ b/css/index-style.css
@@ -4,6 +4,7 @@ html,
 body {
   margin: auto;
   padding: 0px;
+  text-decoration: none;
 }
 
 .fromlogo {
@@ -75,19 +76,15 @@ body {
 }
 
 .linklist {
-  text-decoration: none;
   color: black;
+  text-decoration: none;
 }
 
 .linklist:hover {
   color: gray;
 }
 
-.linklist2 {
+.linklist:visited {
   text-decoration: none;
   color: black;
-}
-
-.linklist2:hover {
-  color: gray;
 }
