--- a/css/index-style.css
+++ b/css/index-style.css
@@ -46,7 +46,7 @@ body {
   align-content: center;
   width: 70%;
   height: auto;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.6);
   margin-top: 180px;
   margin-left: 17%;
   margin-bottom: 50px;
@@ -54,7 +54,7 @@ body {
   padding-left: 25px;
   padding-right: 25px;
   font-size: 30px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   color: black;
   text-decoration: none;
 }
@@ -95,4 +95,10 @@ body {
 .tablejogo {
   display: flex;
   justify-content: space-around;
+}
+
+.centro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
