--- a/css/index-style.css
+++ b/css/index-style.css
@@ -30,7 +30,6 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
   top: 0;
 }
 
@@ -93,6 +92,7 @@ body {
   text-emphasis-color: grey;
   text-decoration: solid;
   animation: headShake 2s;
+  font-weight: bold;
 }
 
 .tablejogo {
