--- a/css/index-style.css
+++ b/css/index-style.css
@@ -35,9 +35,9 @@ a {
 
 body {
   font-family: "Abel", sans-serif;
-  background-image: url("/ProjetoSimone/images/background_images/Best_Anor_Londo.jpg");
+  background-image: url("/images/background_images/Best_Anor_Londo.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-attachment: fixed;
 }
 
@@ -109,25 +109,4 @@ body {
 .container {
   display: inline-block;
   cursor: pointer;
-}
-
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-/* Rotate first bar */
-.change .bar1 {
-  transform: translate(0, 11px) rotate(-45deg);
-}
-
-/* Fade out the second bar */
-.change .bar2 {opacity: 0;}
-
-/* Rotate last bar */
-.change .bar3 {
-  transform: translate(0, -11px) rotate(45deg);
 }
