--- a/css/index-style.css
+++ b/css/index-style.css
@@ -29,6 +29,7 @@ a {
   font-size: 2.07vh;
   display: flex;
   justify-content: space-around;
+  align-content: center;
   align-items: center;
   top: 0;
 }
@@ -42,6 +43,7 @@ body {
 }
 
 .container {
+  display: flex;
   align-items: center;
   align-content: center;
   width: 70%;
@@ -109,4 +111,97 @@ body {
 .container {
   display: inline-block;
   cursor: pointer;
+}
+
+@media print {
+  html,
+  body {
+    margin: auto;
+    padding: 0px;
+    text-decoration: none;
+  }
+
+  .fromlogo {
+    visibility: hidden;
+  }
+  #menu {
+    visibility: hidden;
+  }
+  .container {
+    border: 1px;
+    text-align: justify;
+    font-size: 25px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: black;
+    text-decoration: none;
+    border-radius: 8px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    background-image: url("/images/background_images/AnorLondoMobile.jpg");
+  }
+  .container {
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    margin-left: 11px;
+    text-align: justify;
+    font-size: 25px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: black;
+    text-decoration: none;
+    border-radius: 8px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  body {
+    background-image: url("/images/background_images/AnorLondoIpad.webp");
+  }
+  .container {
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+    border: 1px solid rgba(75, 165, 255, 0.6);
+    margin-left: 15px;
+    text-align: justify;
+    font-size: 30px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: black;
+    text-decoration: none;
+    border-radius: 12px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  body {
+    background-image: url("/images/background_images/AnorLondoIpad.webp");
+  }
+  .container {
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+    border: 1px solid rgba(15, 255, 255, 1);
+    text-align: center;
+    font-size: 40px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: black;
+    text-decoration: none;
+    border-radius: 12px;
+  }
 }
